<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/categories" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@android:drawable/btn_star"
        android:title="@string/favorites" />

    <item
        android:id="@+id/navigation_new_recipe"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/new_recipe" />

</menu>